update text for general promo sections
Signed-off-by: serg <contact@sergfurtak.com>

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -67,6 +67,6 @@ shopping:
 
 info_banner:
   fr:
-    - text: Obtenez 25% de rabais sur toutes les montures solaires en magasin
+    - text: Obtenez 25% de rabais sur toutes les montures solaires en magasin.
   en:
-    - text: Get 25% off all sunglasses frames in store
+    - text: Get 25% off all sunglasses frames in store.
