--- a/data/promo.yml
+++ b/data/promo.yml
@@ -2,13 +2,13 @@ general:
   fr:
     title: Promotions
     description: |
-      Obtenez 30% de rabais sur la deuxième paire de lunettes complète.
+      Obtenez 25% de rabais sur toutes les montures solaires en magasin.
     btntxt: Voir nos promotions
     btnurl: promotions/
   en:
     title: Promotions
     description: |
-      Get 30% off on the second complete pair of glasses.
+      Get 25% off all sunglasses frames in store.
     btntxt: More promotions
     btnurl: en/promotions/
 services:
