update position for employee and reorganize employees list

--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -1,12 +1,12 @@
 equipe:
   - name: Suzanne Huynh
     nameen: Suzanne Huynh
-    title: Opticien
+    title: Opticienne
     titleen: Optician
     ordre: 1
     group: ood
-  - name: Antonio Canuto
-    nameen: Antonio Canuto
+  - name: Docteur Antonio Canuto
+    nameen: Doctor Antonio Canuto
     title: Optométriste
     titleen: Optometrist
     ordre: 2
@@ -17,25 +17,25 @@ equipe:
     titleen: Optician
     ordre: 3
     group: ood
+  - name: Docteur Sylvain Duquette
+    nameen: Doctor Sylvain Duquette
+    title: Optométriste
+    titleen: Optometrist
+    ordre: 4
+    group: od
   - name: Laurent Brassard 
     nameen: Laurent Brassard
     title: Opticien
     titleen: Optician
-    ordre: 4
-    group: ood
-  - name: Docteur Sylvain Duquette 
-    nameen: Doctor Sylvain Duquette
-    title: Optométriste
-    titleen: Optometrist
     ordre: 5
-    group: od
-  - name: Docteure Geneviève Brassard 
+    group: ood
+  - name: Docteure Geneviève Brassard
     nameen: Doctor Geneviève Brassard
     title: Optométriste
     titleen: Optometrist
     ordre: 6
     group: od
-  - name: Docteure Marie-Pier Gascon 
+  - name: Docteure Marie-Pier Gascon
     nameen: Doctor Marie-Pier Gascon
     title: Optométriste
     titleen: Optometrist
