replace vision avenue with avenue eyewear

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -57,7 +57,7 @@ sitetitle: "L'Aire Visuelle | Optométriste , Opticien et Lunetterie à Laval"
 titleautocompletion: false
 defaultsocialimage: "/img/logo-share.jpg"
 removefromexternalsearch: false
-rdvlink: "https://www.visionavenue.ca/"
+rdvlink: "https://www.avenueeyewear.ca/"
 
 # Remove sharp symbols('#') below for showing shop badge at top of website
 #shopping:
