add config for home banner image in cms

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -1,3 +1,4 @@
+homeBanner: /img/banner-image-december2021.jpg
 socials:
   facebookurl: 'https://www.facebook.com/LAireVisuelle'
   linkedinurl: ''
