add ability to define banner urls on homepage

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -88,6 +88,15 @@ collections:
       - name: homeBanner
         label: Home banner image
         widget: image
+      - name: homeBannerUrls
+        label: Home banner urls
+        widget: object
+        collapsed: true
+        required: false
+        fields:
+        - {label: "French version", name: "fr", widget: "string"}
+        - {label: "English version", name: "en", widget: "string"}
+
 ### SETTINGS
   # - name: "settings"
   #   label: "Settings"
