--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,26 +58,47 @@ collections:
   - name: "promotions-fr" # Used in routes, e.g. /admin/collections/blog
     label: "Promotions - FR" # Used in the UI
     folder: "content/promotions" # The path to the folder where the documents are stored
-    slug: "{{identifiant}}.en"
+    slug: "{{identifiant}}"
     editor:
       preview: false
     create: true # Allow users to create new documents in this collection
-    filter: 
+    filter:
       field: "i18nlanguage"
       value: "fr"
     fields:
-      - {label: "Titre SEO", name: "title", widget: "string"}
-      - {label: "Titre visible", name: "titre", widget: "string"}
-      - {label: "Lien interne (ce qui suit le https://www.lairevisuelle.com/articles)", name: "slug", widget: "string", default: "ceci-est-un-example", pattern: ["^[a-z0-9]+(?:-[a-z0-9/]+)*$", "Svp utilisez le format ceci-est-un-test"]}
-      - {label: "Identifiant (utilisé à l'interne seulement pour identifié l'article", name: "identifiant", default: "04-exemple-article", pattern: ["^[a-z0-9]+(?:-[a-z0-9]+)*$", "Svp utilisez le format 04-exemple-article"], widget: "string"}
-      - {label: "Description SEO", name: "description", widget: "text", required: false}
-      - {label: "Image principale (non requise pour article externe)", name: "image", widget: "image" , required: false}
-      - {label: "Date de publication", name: "date", widget: "datetime", format: "YYYY-MM-DD"}
-#      - {label: "Catégories (séparées de virgules)", name: "categories", widget: "list", required: false}
-      - {label: "Langue", name: "i18nlanguage", widget: "hidden", default: "en"}
-      - {label: "Importance (0 étant le plus important)", name: "ordre", widget: "number", default: 0, required: false}
-      - {label: "Texte", name: "body", widget: "markdown"}
-      - {label: "Rendre l'article invisible?", name: "draft", widget: "boolean", required: false, default: false}
+    - {label: "Titre visible", name: "titre", widget: "string"}
+    - {label: "Image principale (non requise pour article externe)", name: "image", widget: "image"}
+    - {label: "Texte", name: "body", widget: "markdown"}
+    - {label: "Identifiant (utilisé à l'interne seulement pour identifié l'article", name: "identifiant", default: "04-exemple-article", pattern: ["^[a-z0-9]+(?:-[a-z0-9]+)*$", "Svp utilisez le format 04-exemple-article"], widget: "string"}
+    - {label: "Lien interne (ce qui suit le https://www.lairevisuelle.com/promotions)", name: "slug", widget: "string", default: "ceci-est-un-example", pattern: ["^[a-z0-9]+(?:-[a-z0-9/]+)*$", "Svp utilisez le format ceci-est-un-test"]}
+    - {label: "Titre SEO", name: "title", widget: "string", required: false}
+    - {label: "Description SEO", name: "description", widget: "text", required: false}
+    - {label: "Start date de publication", name: "startdate", widget: "datetime", format: "YYYY-MM-DD", required: false}
+    - {label: "Langue", name: "i18nlanguage", widget: "hidden", default: "fr"}
+    - {label: "Importance (0 étant le plus important)", name: "weight", widget: "number", default: 1, required: false}
+    - {label: "Rendre l'article invisible?", name: "draft", widget: "boolean", required: false, default: false}
+  - name: "promotions-en"
+    label: "Promotions - EN"
+    folder: "content/promotions"
+    slug: "{{identifiant}}.en"
+    editor:
+      preview: false
+    create: true
+    filter:
+      field: "i18nlanguage"
+      value: "en"
+    fields:
+    - {label: "Titre visible", name: "titre", widget: "string"}
+    - {label: "Image principale (non requise pour article externe)", name: "image", widget: "image"}
+    - {label: "Texte", name: "body", widget: "markdown"}
+    - {label: "Identifiant (utilisé à l'interne seulement pour identifié l'article", name: "identifiant", default: "04-exemple-article", pattern: ["^[a-z0-9]+(?:-[a-z0-9]+)*$", "Svp utilisez le format 04-exemple-article"], widget: "string"}
+    - {label: "Lien interne (ce qui suit le https://www.lairevisuelle.com/promotions)", name: "slug", widget: "string", default: "ceci-est-un-example", pattern: ["^[a-z0-9]+(?:-[a-z0-9/]+)*$", "Svp utilisez le format ceci-est-un-test"]}
+    - {label: "Titre SEO", name: "title", widget: "string", required: false}
+    - {label: "Description SEO", name: "description", widget: "text", required: false}
+    - {label: "Start date de publication", name: "startdate", widget: "datetime", format: "YYYY-MM-DD", required: false}
+    - {label: "Langue", name: "i18nlanguage", widget: "hidden", default: "en"}
+    - {label: "Importance (0 étant le plus important)", name: "weight", widget: "number", default: 1, required: false}
+    - {label: "Rendre l'article invisible?", name: "draft", widget: "boolean", required: false, default: false}
   - name: custom_pages
     label: "Custom Pages"
     files:
