Update Custom Pages “settings”

--- a/data/settings.yml
+++ b/data/settings.yml
@@ -11,7 +11,7 @@ socials:
   googleplusurl: ""
   twitterurl: ""
   instagramurl: https://www.instagram.com/laire_visuelle/
-homeBanner: /img/volodymyr-hryshchenko-nqq_wkbjmz0-unsplash.jpg
+homeBanner: /img/homepage-banner-l-aire-visuelle-1-.png
 defaultsocialimage: /img/logo-share.jpg
 phone: (450) 669-1686
 homeBannerUrls:
