--- a/data/promo.yml
+++ b/data/promo.yml
@@ -1,20 +1,19 @@
 general:
   fr:
     title: Promotions
-    description: |
-      Achetez deux paires de lunettes de prescription et obtenez un rabais de 30% sur la deuxième.
+    description: Obtenez 25% de rabais sur les montures solaires sélectionnées.
     btntxt: Voir nos promotions
     btnurl: promotions/
   en:
     title: Promotions
-    description: |
-      Buy two pairs of prescription glasses and get a 30% discount on the second.
+    description: Get 25% off on selected sunglasses frames.
     btntxt: More promotions
     btnurl: en/promotions/
 services:
   fr:
     title: Rendez-vous en ligne
-    description: Réservez une plage horaire avec un expert facilement grâce à notre système de réservation en ligne.
+    description: Réservez une plage horaire avec un expert facilement grâce à notre
+      système de réservation en ligne.
     btntxt: En savoir plus
     btnurl: rendez-vous
   en:
