Update Custom Pages “equipe”

--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -41,7 +41,7 @@ equipe:
     titleen: Optometrist
     group: od
     ordre: 2
-  - name: Dre Badr Mehdi
+  - name: Dre. Badr Mehdi
     nameen: Doctor Badr Mehdi
     title: Optométriste
     titleen: Optometrist
