--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -41,3 +41,9 @@ equipe:
     titleen: Optometrist
     group: od
     ordre: 2
+  - name: Paula Vallejo
+    nameen: Paula Vallejo
+    title: Opticienne
+    titleen: Optician
+    group: ood
+    ordre: 5
