Update Custom Pages “equipe”

--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -1,6 +1,6 @@
 equipe:
   - name: Dr. Antonio Canuto
-    nameen: Doctor Antonio Canuto
+    nameen: Dr. Antonio Canuto
     title: Optométriste
     titleen: Optometrist
     ordre: 4
