Update Custom Pages “equipe”

--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -12,7 +12,7 @@ equipe:
     ordre: 5
     group: ood
   - name: Dr. Sylvain Duquette
-    nameen: Doctor Sylvain Duquette
+    nameen: Dr. Sylvain Duquette
     title: Optométriste
     titleen: Optometrist
     ordre: 1
