Update Custom Pages “equipe”

--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -24,7 +24,7 @@ equipe:
     ordre: 5
     group: ood
   - name: Dre. Geneviève Brassard
-    nameen: Doctor Geneviève Brassard
+    nameen: Dr. Geneviève Brassard
     title: Optométriste
     titleen: Optometrist
     ordre: 5
