Update Custom Pages “equipe”

--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -30,7 +30,7 @@ equipe:
     ordre: 5
     group: od
   - name: Dre. Judy Breskott
-    nameen: Doctor Judy Breskott
+    nameen: Dr. Judy Breskott
     title: Optométriste
     titleen: Optometrist
     ordre: 2
