Update Custom Pages “equipe”

--- a/data/equipe.yml
+++ b/data/equipe.yml
@@ -36,7 +36,7 @@ equipe:
     ordre: 2
     group: od
   - name: Dre. Badr Mehdi
-    nameen: Doctor Badr Mehdi
+    nameen: Dr. Badr Mehdi
     title: Optométriste
     titleen: Optometrist
     group: od
